# CA2AIConcepts

./: AI_Concepts_Implementations_CA2_GiorgioZoppi.ipynb  README.md  pyproject.toml  shifts.py  treenode.py
